--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			let ARText = [
 				{
 					scale: "10 10 0",
-					position: "-10 5 0",
+					position: "-4 5 0",
 					latitude: "37.19226040110459",
 					longitude: "-3.6167509034519636",
 					color: "yellow",
@@ -34,7 +34,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "-10 5 0",
+					position: "-4 5 0",
 					latitude: "37.192215393923895",
 					longitude: "-3.616513007858702",
 					color: "yellow",
@@ -42,7 +42,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "-10 5 0",
+					position: "-4 5 0",
 					latitude: "37.19204708197262",
 					longitude: "-3.6170662619376253",
 					color: "yellow",
@@ -50,7 +50,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "-10 5 0",
+					position: "-4 5 0",
 					latitude: "37.192346396934134",
 					longitude: "-3.6172604837167497",
 					color: "yellow",
@@ -58,7 +58,7 @@
 				}, 
 				{
 					scale: "10 10 0",
-					position: "0 5 0",
+					position: "-4 5 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					color: "yellow",
@@ -145,7 +145,7 @@
 				{
 					width: "12",
 					height: "6",
-					position: "0 0 0",
+					position: "-3 5 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					src: "fut.png"
@@ -161,7 +161,7 @@
 				AREntity.setAttribute("position", ARText[i].position);
 				AREntity.setAttribute("color", ARText[i].color);
 				AREntity.setAttribute("value", ARText[i].value);
-				AREntity.setAttribute("align", "left");
+				AREntity.setAttribute("align", "center");
 				AREntity.setAttribute("gps-new-entity-place", "latitude: "+ARText[i].latitude+"; longitude: "+ARText[i].longitude);
 				ARScene.appendChild(AREntity);
 			}
