--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					position: "-4 5 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
-					color: "yellow",
+					color: "#ff0",
 					value: "PISTAS DE FUTBOL"
 				}
 			];
@@ -145,7 +145,7 @@
 				{
 					width: "12",
 					height: "6",
-					position: "-3 5 0",
+					position: "0 0 0",
 					latitude: "37.19186648347383",
 					longitude: "-3.6168797495054497",
 					src: "fut.png"
